2018-09-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Load glyphs and advances explicitly.

	* src/ftcommon.h (FTDemo_Handle): Remove `string_reload' flag.
	(TGlyph): Split `delta' into original `lsb_delta' and `rsb_delta'.
	(FTDemo_String_Load): Declare new function.
	* src/ftcommon.c (string_load, string_render_prepare): Merge into...
	(FTDemo_String_Load): ... this function.
	(FTDemo_String_Draw): Devoid of string loading.

	* src/ftstring.c (main, Process_Event,Render_{Waterfall,KernCmp}):
	Call `FTDemo_String_Load' explicitly.

2018-09-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Keep all advances together.

	* src/ftcommon.h (TGlyph): New `hadvance' field for kerned advance.
	* src/ftcommon.c (string_load): Initialize it here.
	(string_render_prepare): Modify it here.
	(FTDemo_String_Draw): Use it here.

2018-09-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Draw warning box for zero-width glyphs.

	* src/ftview.c ({X,Y}_TOO_LONG): Reworked the macros.
	(Render_{Stroke,Fancy,All}): Fill the added space with a warning box
	for zero-width glyphs.
	(Render_{Waterfall,Text}): Updated accordingly.

2018-09-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Extra space for zero-width glyphs.

	* src/ftview.c (Render_{Stroke,Fancy,All}): Add half ppem to
	zero-width glyphs.

2018-09-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Handle extra space differently.

	* src/ftcommon.c (FTDemo_Draw_{Index,Glyph_Color}): Move extra pixel
	from here...
	* src/ftview.c (Render_{Stroke,Fancy,All}): ... to here.
	(Render_{Waterfall,Text}): Do not compensate.

2018-08-23  Werner Lemberg  <wl@gnu.org>

	[ftdiff] New keys `A' to `E' to select hinting mode directly.

	* src/ftdiff.c (process_event): Handle keys `A' to `E'.
	(event_help): Updated.

2018-08-04  Werner Lemberg  <wl@gnu.org>

	Fix clang warnings.

	* src/ftstring.c (Process_Event), src/ftview.c (Process_Event): Add
	cast.
